
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog of the
Blank Template for Joomla. Thanks to all those people who've contributed 
bug reports and code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

-------------------- 1.2.3 [2012-08-22] -------------------
^ index.php: update get variable in css and js link

-------------------- 1.2.2 [2012-08-22] -------------------
+ bootstrap-responsive.css
+ bootstrap.css
- bootstrap-responsive.min.css
- bootstrap.min.css
^ bootstrap.css: change paths from /img/ to /images/
^ template.css.php: change path to uncompress bootstrap files
  | thx Volker Richardt

-------------------- 1.2.1 [2012-08-14] -------------------
^ Update Twitter Bootstrap
  ^ bootstrap-responsive.min.css
  ^ bootstrap.min.css: update file and path to images
  ^ glyphicons-halflings-white.png
  ^ glyphicons-halflings.png
  ^ bootstrap.js
  ^ bootstrap.min.js
^ Update jQuery from 1.7.2 to 1.8.0
  ^ jquery-1.8.0.min.js
^ component.php: add a / to the link to modernizr.js in line 28
^ template.js.php: remove obsolete compress function; update jquery

-------------------- 1.2.0 [2012-07-25] -------------------
! lines without brace are specified to version 1.1.13 (for own rebuilding)
! lines in brace specified to 1.2
+ Twitter Bootstrap (as optional parameter)
  + bootstrap-responsive.min.css
  + bootstrap.min.css
  + glyphicons-halflings-white.png
  + glyphicons-halflings.png
  + bootstrap.min.js
  + jquery-1.7.2.min.js
+ PIE.js
+ PIE.php
+ README.md
^ index.php
  # line 14: delete ampersand; from &$app to $app
  + get parameters modernizr, bootstrap and pie (line 11-14)
  + ask parameter pie for css3 support of ie 8+7 (line 27)
  ^ ask parameter moderizr to load script in head (line 47+53)
  - line 31: delete conditional comment for ie6
  - line 40: delete link to tablet.css; integrate 