@@ -1,7 +1,6 @@
 /* TEMPLATE CSS
 *********************************************/
-html {height:100%; margin-bottom:1px; overflow-y:scroll;}
-body {background-color:#fff; color:#000; font:normal normal normal 75%/125% arial,sans-serif; height:100%;}
+html {overflow-y:scroll;}
 
 /* LAYOUT
 *********************************************/
